<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL_IO" Id="{afbc0401-9b0a-45ff-88ab-50c498c61611}">
    <Declaration><![CDATA[VAR_GLOBAL
    //Need to change these to reflect XCS stands and stuff

/// AMS NetID
    g_aEcatMaster1 AT %I* : AMSNETID;

    (* Generic PLC Rail *)
    i_iR32_31el3064s01c01 AT %I*: INT;
    i_iR32_31el3064s01c02 AT %I*: INT;
    i_iR32_31el3064s01c03 AT %I*: INT;
    i_iR32_31el3064s01c04 AT %I*: INT;

    i_xR32_31el1008s02c01 AT %I*: BOOL;
    i_xR32_31el1008s02c02 AT %I*: BOOL;
    i_xR32_31el1008s02c03 AT %I*: BOOL;
    i_xR32_31el1008s02c04 AT %I*: BOOL;
    i_xR32_31el1008s02c05 AT %I*: BOOL;
    i_xR32_31el1008s02c06 AT %I*: BOOL;
    i_xR32_31el1008s02c07 AT %I*: BOOL;
    i_xR32_31el1008s02c08 AT %I*: BOOL;

    q_xR32_31el2008s03c01 AT %Q*: BOOL;
    q_xR32_31el2008s03c02 AT %Q*: BOOL;
    q_xR32_31el2008s03c03 AT %Q*: BOOL;
    q_xR32_31el2008s03c04 AT %Q*: BOOL;
    q_xR32_31el2008s03c05 AT %Q*: BOOL;
    q_xR32_31el2008s03c06 AT %Q*: BOOL;
    q_xR32_31el2008s03c07 AT %Q*: BOOL;
    q_xR32_31el2008s03c08 AT %Q*: BOOL;

    q_xR32_31el2798s04c01 AT %Q*: BOOL;
    q_xR32_31el2798s04c02 AT %Q*: BOOL;
    q_xR32_31el2798s04c03 AT %Q*: BOOL;
    q_xR32_31el2798s04c04 AT %Q*: BOOL;
    q_xR32_31el2798s04c05 AT %Q*: BOOL;
    q_xR32_31el2798s04c06 AT %Q*: BOOL;
    q_xR32_31el2798s04c07 AT %Q*: BOOL;

    (* Perimeter valve before LODCM XRT Stand IDNO 63*)
    i_xS63_EB1_ep2338c01 AT %I* : BOOL;
    i_xS63_EB1_ep2338c02 AT %I* : BOOL;
    q_xS63_EB1_ep2338c03 AT %Q* : BOOL;
    q_xS63_EB1_ep2338c04 AT %Q* : BOOL;
    i_xS63_EB1_ep2338c05 AT %I* : BOOL;
    i_xS63_EB1_ep2338c06 AT %I* : BOOL;
    q_xS63_EB1_ep2338c07 AT %Q* : BOOL;
    q_xS63_EB1_ep2338c08 AT %Q* : BOOL;

    (* Gauges at perimeter XRT Stand IDNO 83*)
    i_iS83_EB1_ep3174c01 AT %I* : INT;
    i_iS83_EB1_ep3174c02 AT %I* : INT;
    i_iS83_EB1_ep3174c03 AT %I* : INT;
    i_iS83_EB1_ep3174c04 AT %I* : INT;

    q_xS83_EB2_ep2624c01 AT %Q* : BOOL;
    q_xS83_EB2_ep2624c02 AT %Q* : BOOL;
    q_xS83_EB2_ep2624c03 AT %Q* : BOOL;
    q_xS83_EB2_ep2624c04 AT %Q* : BOOL;

        (* XRT Stand IDNO 26 *)
    q_xs26_EB1_ep2338c01 AT %Q* : BOOL;
    i_xs26_EB1_ep2338c02 AT %I* : BOOL;
    q_xs26_EB1_ep2338c03 AT %Q* : BOOL;
    q_xs26_EB1_ep2338c04 AT %Q* : BOOL;
    i_xs26_EB1_ep2338c05 AT %I* : BOOL;
    i_xs26_EB1_ep2338c06 AT %I* : BOOL;
    q_xs26_EB1_ep2338c07 AT %Q* : BOOL;
    q_xs26_EB1_ep2338c08 AT %Q* : BOOL;

        (* XRT Stand IDNO 80 *)
    i_xs80_EB1_ep2338c01 AT %I* : BOOL;
    i_xs80_EB1_ep2338c02 AT %I* : BOOL;
    q_xs80_EB1_ep2338c03 AT %Q* : BOOL;
    q_xs80_EB1_ep2338c04 AT %Q* : BOOL;
    i_xs80_EB1_ep2338c05 AT %I* : BOOL;
    i_xs80_EB1_ep2338c06 AT %I* : BOOL;
    q_xs80_EB1_ep2338c07 AT %Q* : BOOL;
    q_xs80_EB1_ep2338c08 AT %Q* : BOOL;

    (* XRT Stand IDNO 78 *)
    i_xs78_EB1_ep2338c01 AT %I* : BOOL;
    i_xs78_EB1_ep2338c02 AT %I* : BOOL;
    q_xs78_EB1_ep2338c03 AT %Q* : BOOL;
    q_xs78_EB1_ep2338c04 AT %Q* : BOOL;
    i_xs78_EB1_ep2338c05 AT %I* : BOOL;
    i_xs78_EB1_ep2338c06 AT %I* : BOOL;
    q_xs78_EB1_ep2338c07 AT %Q* : BOOL;
    q_xs78_EB1_ep2338c08 AT %Q* : BOOL;

    i_is78_EB2_ep3174c01 AT %I* : INT;
    i_is78_EB2_ep3174c02 AT %I* : INT;
    i_is78_EB2_ep3174c03 AT %I* : INT;
    i_is78_EB2_ep3174c04 AT %I* : INT;

    q_xs78_EB3_ep2624c01 AT %Q* : BOOL;
    q_xs78_EB3_ep2624c02 AT %Q* : BOOL;
    q_xs78_EB3_ep2624c03 AT %Q* : BOOL;
    q_xs78_EB3_ep2624c04 AT %Q* : BOOL;


    (* XRT Stand IDNO 20 *)
    i_iS20_EB1_ep3174c01 AT %I* : INT;
    i_iS20_EB1_ep3174c02 AT %I* : INT;
    i_iS20_EB1_ep3174c03 AT %I* : INT;
    i_iS20_EB1_ep3174c04 AT %I* : INT;

    q_xS20_EB2_ep2624c01 AT %Q* : BOOL;
    q_xS20_EB2_ep2624c02 AT %Q* : BOOL;
    q_xS20_EB2_ep2624c03 AT %Q* : BOOL;
    q_xS20_EB2_ep2624c04 AT %Q* : BOOL;


    (* XRT stand 14 *)
    i_xS14_EB1_ep2338c01 AT %I* : BOOL;
    i_xS14_EB1_ep2338c02 AT %I* : BOOL;
    q_xS14_EB1_ep2338c03 AT %Q* : BOOL;
    q_xS14_EB1_ep2338c04 AT %Q* : BOOL;
    i_xS14_EB1_ep2338c05 AT %I* : BOOL;
    i_xS14_EB1_ep2338c06 AT %I* : BOOL;
    q_xS14_EB1_ep2338c07 AT %Q* : BOOL;
    q_xS14_EB1_ep2338c08 AT %Q* : BOOL;

    (* XRT stand 13 *)
    i_iS13_EB1_ep3174c01 AT %I* : INT;
    i_iS13_EB1_ep3174c02 AT %I* : INT;
    i_iS13_EB1_ep3174c03 AT %I* : INT;
    i_iS13_EB1_ep3174c04 AT %I* : INT;

    q_xS13_EB2_ep2624c01 AT %Q* : BOOL;
    q_xS13_EB2_ep2624c02 AT %Q* : BOOL;
    q_xS13_EB2_ep2624c03 AT %Q* : BOOL;
    q_xS13_EB2_ep2624c04 AT %Q* : BOOL;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>